// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem should match snapshot when all props provided 1`] = `
<button
  aria-checked="true"
  class="components-button components-menu-item__button my-class"
  role="menuitemcheckbox"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    My item
  </span>
  <span
    class="components-menu-item__shortcut"
  >
    mod+shift+alt+w
  </span>
  <svg
    aria-hidden="true"
    class="components-menu-items__item-icon has-icon-right"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
    />
  </svg>
</button>
`;

exports[`MenuItem should match snapshot when info is provided 1`] = `
<button
  class="components-button components-menu-item__button"
  role="menuitem"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    <span
      class="components-menu-item__info-wrapper"
    >
      <span
        class="components-menu-item__item"
      >
        My item
      </span>
      <span
        class="components-menu-item__info"
      >
        Extended description of My Item
      </span>
    </span>
  </span>
</button>
`;

exports[`MenuItem should match snapshot when isSelected and role are optionally provided 1`] = `
<button
  class="components-button components-menu-item__button my-class"
  role="menuitem"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    My item
  </span>
  <span
    class="components-menu-item__shortcut"
  >
    mod+shift+alt+w
  </span>
  <svg
    aria-hidden="true"
    class="components-menu-items__item-icon has-icon-right"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
    />
  </svg>
</button>
`;

exports[`MenuItem should match snapshot when only label provided 1`] = `
<button
  class="components-button components-menu-item__button"
  role="menuitem"
  type="button"
>
  <span
    class="components-menu-item__item"
  >
    My item
  </span>
</button>
`;
